--- a/index.html
+++ b/index.html
@@ -19,20 +19,23 @@ h1 {letter-spacing: 6px}
 <div class="w3-content" style="max-width:1500px">
 
 <!-- Header -->
-<header class="w3-panel w3-center w3-opacity" style="padding:100px 16px">
-  <h1 class="w3-xlarge">Wagdian.com</h1>
+<header class="w3-panel w3-center w3-opacity" >
   
   <div class="w3-padding-32 w3-xxxlarge">
-      Coming Soon!
+     Website  Coming Soon!
   </div>
 </header>
+<div class="w3-content w3-center">
+    <iframe src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2Fwag.feed%2F&tabs=timeline&width=500&height=500&small_header=false&adapt_container_width=true&hide_cover=false&show_facepile=true&appId=471837996564805" width="500" height="500" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true" allow="encrypted-media"></iframe>
+</div>
+
 
 <!-- End Page Content -->
 </div>
 
 <!-- Footer -->
 <footer class="w3-container w3-padding-64 w3-center w3-large"> 
-    <a target="_blank" href="https://www.facebook.com/Wagdian.Webices"><i class="fa fa-facebook-official w3-hover-opacity w3-xlarge"></i></a>
+    <a target="_blank" href="https://www.facebook.com/Wag.feed"><i class="fa fa-facebook-official w3-hover-opacity w3-xlarge"></i></a>
   
   <p>&copy; <a href="http://webices.com" target="_blank" class="w3-hover-text-green">Powered by Webices.com</a></p>
 </footer>
